[TFX-2117] config changes for email